Jupyter Notebook for HW1

--- a/Homework One - Biller.ipynb
+++ b/Homework One - Biller.ipynb
@@ -71,7 +71,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#Problem 3"
+   ]
   }
  ],
  "metadata": {
